2004-07-02  Mikael Hallendal  <micke@imendio.com>

	* src/dh-base.c: (base_add_books):
	- Don't build and check for books "." and "..".
	- Patch from Russel Shaw.

2004-07-02  Mikael Hallendal  <micke@imendio.com>

	* src/dh-base.c: (base_init_books):
	- Read books from home directory first to always make sure that user 
	  installed documentation is shown if there are duplicates.

2004-05-18  Mikael Hallendal  <micke@imendio.com>

	* autogen.sh: Use automake 1.7

2004-05-06  Mikael Hallendal  <micke@imendio.com>

	* src/dh-keyword-model.c: (dh_keyword_model_filter):
	- If exact match is found, return it so that we can show it in the
	  HTML view. Patch by Marc Britten.

2004-04-30  Adam Weinberger  <adamw@gnome.org>

	* configure.in: Added en_CA to ALL_LINGUAS.

2004-04-30  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* src/Makefile.am: Add mozilla main include directory,
	needed for Mozilla 1.7 (headers changed location).

2004-04-07  Christian Neumair  <chris@gnome-de.org>

	* autogen.sh: automake 1.8 is required, but error message suggested
	that automake 1.4 is required. Fixed that.

2004-04-03  Gareth Owen  <gowen72@yahoo.com>

	* configure.in: Added en_GB to ALL_LINGUAS

2004-03-17  Mikael Hallendal  <micke@imendio.com>

	* devhelp.schemas.in:
	* src/dh-preferences.h:
	* src/dh-window.c: (window_init), (window_populate),
	(window_save_state), (window_restore_state), (dh_window_new):
	- Make the maximized stuff a boolean instead of storing window state.
	- Fixes #137532

2004-03-17  Mikael Hallendal  <micke@imendio.com>

	* devhelp.schemas.in:
	* src/dh-preferences.h:
	* src/dh-window.c: 
	- Save state regarding maximized or not.
	- Patch by Paolo Borelli.

2004-03-17  Mikael Hallendal  <micke@imendio.com>

	* devhelp.in: 
	- Export LD_LIBRARY_PATH, thanks Michel Galle for reporting.

2004-03-17  Mikael Hallendal  <micke@imendio.com>

	* Release 0.9

	* NEWS: Updated for 0.9
	* configure.in: Bumped version to 0.9
	* src/Makefile.am: Fixed the genmarshal-crap