@@ -1,3 +1,11 @@
+2004-07-25  Mikael Hallendal,,,  <micke@imendio.com>
+
+	* src/dh-window.c:
+	(window_populate): Make sure that the paned isn't 0 wide.
+	(window_restore_state): Make sure that the window isn't 0x0 pixels
+	(dh_window_show): Make sure that the HTML view is realized before
+	  trying to write HTML to it. Fixed bug #147343.
+
 2004-07-02  Mikael Hallendal  <micke@imendio.com>
 
 	* src/dh-base.c: (base_add_books):
